--- a/html/collections.html
+++ b/html/collections.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    <link href="/style.css" type="text/css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
     <title>Collection</title>
@@ -17,9 +17,9 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
-      <a class="navbar-brand active hb-align" href="/index.html">
+      <a class="navbar-brand active hb-align" href="index.html">
         <img
-          src="/image/logo.png"
+          src="image/logo.png"
           width="30"
           height="30"
           class="d-inline-block align-top"
@@ -41,9 +41,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="/html/story.html">THE STORY</a>
+          <a class="nav-link" href="html/story.html">THE STORY</a>
           <a class="nav-link">OUR COLLECTIONS <span class="sr-only">(current)</span></a>
-          <a class="nav-link" href="/html/contact.html">CONTACT US</a>
+          <a class="nav-link" href="html/contact.html">CONTACT US</a>
         </div>
       </div>
     </nav>
@@ -55,16 +55,16 @@
           <div id="carousel-classic" class="carousel slide" data-ride="carousel" data-interval="false">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/image/classic/classic3.png" class="d-block w-100" alt="Classic 1">
+                <img src="image/classic/classic3.png" class="d-block w-100" alt="Classic 1">
               </div>
               <div class="carousel-item">
-                <img src="/image/classic/classic2.png" class="d-block w-100" alt="Classic 2">
+                <img src="image/classic/classic2.png" class="d-block w-100" alt="Classic 2">
               </div>
               <div class="carousel-item">
-                <img src="/image/classic/classic1.png" class="d-block w-100" alt="Classic 3">
+                <img src="image/classic/classic1.png" class="d-block w-100" alt="Classic 3">
               </div>
               <div class="carousel-item">
-                <img src="/image/classic/classic4.png" class="d-block w-100" alt="Classic 4">
+                <img src="image/classic/classic4.png" class="d-block w-100" alt="Classic 4">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carousel-classic" role="button" data-slide="prev">
@@ -92,16 +92,16 @@
           <div id="carousel-knotting" class="carousel slide" data-ride="carousel" data-interval="false">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/image/knotting/knotting1.png" class="d-block w-100" alt="Knotting 1">
+                <img src="image/knotting/knotting1.png" class="d-block w-100" alt="Knotting 1">
               </div>
               <div class="carousel-item">
-                <img src="/image/knotting/knotting2.png" class="d-block w-100" alt="Knotting 2">
+                <img src="image/knotting/knotting2.png" class="d-block w-100" alt="Knotting 2">
               </div>
               <div class="carousel-item">
-                <img src="/image/knotting/knotting3.png" class="d-block w-100" alt="Knotting 3">
+                <img src="image/knotting/knotting3.png" class="d-block w-100" alt="Knotting 3">
               </div>
               <div class="carousel-item">
-                <img src="/image/knotting/knotting4.png" class="d-block w-100" alt="Knotting 4">
+                <img src="image/knotting/knotting4.png" class="d-block w-100" alt="Knotting 4">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carousel-knotting" role="button" data-slide="prev">
@@ -129,16 +129,16 @@
             <div id="carousel-stone" class="carousel slide" data-ride="carousel" data-interval="false">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="/image/stone/stone1.png" class="d-block w-100" alt="Stone 1">
+                  <img src="image/stone/stone1.png" class="d-block w-100" alt="Stone 1">
                 </div>
                 <div class="carousel-item">
-                  <img src="/image/stone/stone2.png" class="d-block w-100" alt="Stone 2">
+                  <img src="image/stone/stone2.png" class="d-block w-100" alt="Stone 2">
                 </div>
                 <div class="carousel-item">
-                  <img src="/image/stone/stone3.png" class="d-block w-100" alt="Stone 3">
+                  <img src="image/stone/stone3.png" class="d-block w-100" alt="Stone 3">
                 </div>
                 <div class="carousel-item">
-                  <img src="/image/stone/stone4.png" class="d-block w-100" alt="Stone 4">
+                  <img src="image/stone/stone4.png" class="d-block w-100" alt="Stone 4">
                 </div>
               </div>
               <a class="carousel-control-prev" href="#carousel-stone" role="button" data-slide="prev">
@@ -166,13 +166,13 @@
             <div id="carousel-bubbly" class="carousel slide" data-ride="carousel" data-interval="false">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="/image/bubbly/bubbly1.png" class="d-block w-100" alt="Bubbly 1">
+                  <img src="image/bubbly/bubbly1.png" class="d-block w-100" alt="Bubbly 1">
                 </div>
                 <div class="carousel-item">
-                  <img src="/image/bubbly/bubbly2.png" class="d-block w-100" alt="Bubbly 2">
+                  <img src="image/bubbly/bubbly2.png" class="d-block w-100" alt="Bubbly 2">
                 </div>
                 <div class="carousel-item">
-                  <img src="/image/bubbly/bubbly3.png" class="d-block w-100" alt="Bubbly 3">
+                  <img src="image/bubbly/bubbly3.png" class="d-block w-100" alt="Bubbly 3">
                 </div>
               </div>
               <a class="carousel-control-prev" href="#carousel-bubbly" role="button" data-slide="prev">
@@ -198,10 +198,10 @@
       <div class="footer">
         <h6>CONTACT US</h6>
         <a href="https://www.facebook.com/woolawoola.sg">
-          <img src="/image/facebook.png" height="45px" width="45px" alt="FB link">
+          <img src="image/facebook.png" height="45px" width="45px" alt="FB link">
         </a>
         <a href="https://www.instagram.com/woola.woola/">
-          <img src="/image/instagram.png" height="35px" width="65px" alt="IG link">
+          <img src="image/instagram.png" height="35px" width="65px" alt="IG link">
         </a>
         <p class="footer-text">&#169 2020, Woola Woola. All rights reserved.</p>
       </div>
