--- a/contact.html
+++ b/contact.html
@@ -75,20 +75,20 @@
         </form>
       </div>
     </div>
-  </body>
-
+    
   <!-- Footer -->
   <footer>
     <div class="footer">
       <h6>CONTACT US</h6>
       <a href="https://www.facebook.com/woolawoola.sg">
-          <img src="image/facebook.png" height="45px" width="45px" alt="FB link">
+        <img src="image/facebook.png" height="45" width="45" alt="FB link">
       </a>
       <a href="https://www.instagram.com/woola.woola/">
-          <img src="image/instagram.png" height="35px" width="65px" alt="IG link">
+        <img src="image/instagram.png" height="35" width="65" alt="IG link">
       </a>
-      <p class="footer-text">&#169 2020, Woola Woola. All rights reserved.</p>
+      <p class="footer-text">&#169; 2020, Woola Woola. All rights reserved.</p>
     </div>
   </footer>
+</body>
 
 </html>
