--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
         <div class="col-lg-8 container-content">
           <h2 class="title-space">THE STORY</h2>
           <p class="para-last">Just like you, we have an undying love for accessorized earrings and we want to share it with the world.</p>
-          <button type="button" class="btn btn-primary btn-custom">
-            <a href="story.html">ABOUT US</a>
-            </button>
+          <a class="btn btn-primary btn-custom" href="story.html" role="button">ABOUT US</a>
         </div>
       </div>
     </div>
@@ -91,27 +89,29 @@
           <p class="para-last">
             We want to inspire you to be carefree. To feel what you feel everyday, to wear whatever accessories, whenever you want, with no restrictions.
           </p>
-          <button type="button" class="btn btn-primary btn-custom"><a href="collections.html">VIEW OUR COLLECTIONS</a></button>
+          <a class="btn btn-primary btn-custom" href="collections.html" role="button">VIEW OUR COLLECTIONS</a>
         </div>
         <div class="col-lg-4 image-center">
           <img src="image/collection-thumbnail.JPG" width="300" height="300" alt="Our Collections" class="container-content">
         </div>
       </div>
     </div>
+
+    <!-- Footer -->
+    <footer>
+      <div class="footer">
+        <h6>CONTACT US</h6>
+        <a href="https://www.facebook.com/woolawoola.sg">
+          <img src="image/facebook.png" height="45" width="45" alt="FB link">
+        </a>
+        <a href="https://www.instagram.com/woola.woola/">
+          <img src="image/instagram.png" height="35" width="65" alt="IG link">
+        </a>
+        <p class="footer-text">&#169; 2020, Woola Woola. All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 
-  <!-- Footer -->
-  <footer>
-    <div class="footer">
-      <h6>CONTACT US</h6>
-      <a href="https://www.facebook.com/woolawoola.sg">
-        <img src="image/facebook.png" height="45px" width="45px" alt="FB link">
-      </a>
-      <a href="https://www.instagram.com/woola.woola/">
-        <img src="image/instagram.png" height="35px" width="65px" alt="IG link">
-      </a>
-      <p class="footer-text">&#169 2020, Woola Woola. All rights reserved.</p>
-    </div>
-  </footer>
+    
 
 </html>
